--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,13 +28,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">HEM</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" style="font-weight:bold" href="http://193.10.202.78/GuestWebSite">GÄST</a>
+                            <a class="nav-link text-dark" style="font-weight:bold" href="http://193.10.202.78/GuestWebSite">HEM</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" style="font-weight:bold" href="http://193.10.202.77/KonferensrumSida">KONFERENSER</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" style="font-weight:bold" href="http://193.10.202.78/GuestWebSite">GÄST</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" style="font-weight:bold" href="http://193.10.202.81/Seasharp">BOKA RUM</a>
@@ -72,23 +72,29 @@
                                 <div class="dropdown-divider"></div>
                                 <p class="dropdown-item">Aktiviteter</p>
                                 <a class="dropdown-item" asp-area="" asp-controller="Guest" asp-action="GetActivities">Visa Aktiviteter</a>
-                                <a class="dropdown-item" asp-area="" asp-controller="Guest" asp-action="#">Mina Bokningar</a>
+                                @*<a class="dropdown-item" asp-area="" asp-controller="Guest" asp-action="#">Mina Bokningar</a>*@
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" asp-controller="Admin" asp-action="Index">Logga in som Admin</a>
+                                @*<a class="dropdown-item" asp-controller="Admin" asp-action="Index">Logga in som Admin</a>*@
                             </div>
                         </li>
 
                         @*@ @Html.ActionLink("Visa aktiviteter", "GetActivities") @* Skall visa de aktiviteter som finns tillgängliga att boka in sig på
-                            @Html.ActionLink("Restaurangen", "RestaurantInfo")  Skall ta fram kort information om restaurangen och kanske snabblänk till att boka ett bord
-                            @Html.ActionLink("Mina Bokningar", null)  Skall visa vy för alla bokningar som finns under gästen, både aktiviteter och bokade bord i restaurang.
-                            @Html.ActionLink("Reservera bord i restaurangen", "GetReservations")*@
+        @Html.ActionLink("Restaurangen", "RestaurantInfo")  Skall ta fram kort information om restaurangen och kanske snabblänk till att boka ett bord
+        @Html.ActionLink("Mina Bokningar", null)  Skall visa vy för alla bokningar som finns under gästen, både aktiviteter och bokade bord i restaurang.
+        @Html.ActionLink("Reservera bord i restaurangen", "GetReservations")*@
 
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Admin" asp-action="Index">Logga in</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Admin" asp-action="SignOut">Logga ut</a>
-                        </li>
+                        @if (!User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Admin" asp-action="Index">Logga in</a>
+                            </li>
+                        }
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Admin" asp-action="SignOut">Logga ut</a>
+                            </li>
+                        }
 
                     </ul>
                 </div>
