--- a/Views/Shared/_Layout_Admin.cshtml
+++ b/Views/Shared/_Layout_Admin.cshtml
@@ -8,11 +8,13 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link href="http://193.10.202.77/css/HotelSeasharp.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3" style="background: rgba(255,127,80,0.6);
+            width: 100%;">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ResAktWebb</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -24,11 +26,23 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" style="font-weight:bold" href="http://193.10.202.77/KonferensrumSida">KonferensAdmin</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" style="font-weight:bold" href="http://193.10.202.78/PublishGuestAdmin">GästAdmin</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" style="font-weight:bold" href="http://informatik10.ei.hv.se/UserClient">SysAdmin</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" style="font-weight:bold" href="http://193.10.202.81/Seasharp">BokningsAdmin</a>
+                        </li>
 
                         @if (User.IsInRole("ResAdmin"))
                         {
                             <li class="dropdown nav-item">
-                                <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">AdminRestaurang</a>
+                                <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">RestaurangAdmin</a>
                                 <div class="nav-link text-dark dropdown-content">
                                     <a class="dropdown-item" asp-area="" asp-controller="Menus" asp-action="Index">Meny</a>
                                     <a class="dropdown-item" asp-area="" asp-controller="RestaurantInfo" asp-action="Index">Restauranginfo</a>
@@ -37,7 +51,7 @@
                                     @*<a class="dropdown-item" href="#">Separated link</a>*@
                                 </div>
                             </li>
-                            
+
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="SignOut">Logga ut</a>
                             </li>
@@ -46,7 +60,7 @@
                         @if (User.IsInRole("ActAdmin"))
                         {
                             <li class="dropdown nav-item">
-                                <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">AdminAktivitet</a>
+                                <a class="nav-link text-dark" style="font-weight:bold" asp-area="" asp-controller="Home" asp-action="Index">AktivitetsAdmin</a>
                                 <div class="nav-link text-dark dropdown-content">
                                     <a class="dropdown-item" asp-area="" asp-controller="Activities" asp-action="Index">Aktiviteter</a>
                                     <a class="dropdown-item" asp-area="" asp-controller="ActivityBookings" asp-action="Index">Aktivitetsbokningar</a>
