--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,16 +28,16 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" style="font-weight:bold" href="http://193.10.202.78/GuestWebSite">HEM</a>
+                            <a class="nav-link text-dark" href="http://193.10.202.78/GuestWebSite">HEM</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" style="font-weight:bold" href="http://193.10.202.77/KonferensrumSida">KONFERENSER</a>
+                            <a class="nav-link text-dark" href="http://193.10.202.77/KonferensrumSida">KONFERENSER</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" style="font-weight:bold" href="http://193.10.202.78/GuestWebSite">GÄST</a>
+                            <a class="nav-link text-dark" href="http://193.10.202.78/GuestWebSite">GÄST</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" style="font-weight:bold" href="http://193.10.202.81/Seasharp">BOKA RUM</a>
+                            <a class="nav-link text-dark" href="http://193.10.202.81/Seasharp">BOKA RUM</a>
                         </li>
 
                         <style>
