--- a/Views/Shared/_Layout_Admin.cshtml
+++ b/Views/Shared/_Layout_Admin.cshtml
@@ -27,16 +27,16 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" style="font-weight:bold" href="http://193.10.202.77/KonferensrumSida">KonferensAdmin</a>
+                            <a class="nav-link text-dark" href="http://193.10.202.77/KonferensrumSida">KonferensAdmin</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" style="font-weight:bold" href="http://193.10.202.78/PublishGuestAdmin">GästAdmin</a>
+                            <a class="nav-link text-dark" href="http://193.10.202.78/PublishGuestAdmin">GästAdmin</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" style="font-weight:bold" href="http://informatik10.ei.hv.se/UserClient">SysAdmin</a>
+                            <a class="nav-link text-dark" href="http://informatik10.ei.hv.se/UserClient">SysAdmin</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" style="font-weight:bold" href="http://193.10.202.81/Seasharp">BokningsAdmin</a>
+                            <a class="nav-link text-dark" href="http://193.10.202.81/Seasharpadmin">BokningsAdmin</a>
                         </li>
 
                         @if (User.IsInRole("ResAdmin"))
