--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -9,12 +9,12 @@
         <div class="row" style="display:flex; align-content:center;">
             <div class="col-md-12" style="width:fit-content;">
                 <div class="form-group">
-                    <label asp-for="Username" class="control-label"></label>
+                    <label asp-for="Username" class="control-label">Användarnamn:</label>
                     <input asp-for="Username" class="form-control" />
                     <span asp-validation-for="Username" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Password" class="control-label"></label>
+                    <label asp-for="Password" class="control-label">Lösenord:</label>
                     <input asp-for="Password" class="form-control" type="password" />
                     <span asp-validation-for="Password" class="text-danger"></span>
                 </div>
