--- a/Views/Guest/RestaurantInfo.cshtml
+++ b/Views/Guest/RestaurantInfo.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 <div class="my-div">
-    <h1>Restaurant information</h1>
+    <h1>Öppetider</h1>
 
 
     @foreach (var item in Model)
