--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3" style=" background-color: lightgrey; background: rgba(211, 211, 211, 0.8); height: 40%;
         width: 100%;">
-            <h1 class="rubrik1">Hotell SeaSharp</h1>
+            <a class="my-link" href="http://193.10.202.78/GuestWebSite"><h2 class="rubrik1">Hotell SeaSharp</h2></a>
 
             <div class="containeruppe">
                 @*<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Hotell SeaSharp</a>*@
@@ -31,9 +31,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="http://193.10.202.77/KonferensrumSida">KONFERENSER</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" href="http://193.10.202.78/GuestWebSite">GÄST</a>
-                        </li>
+                       
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="http://193.10.202.81/Seasharp">BOKA RUM</a>
                         </li>
